sample/retrieveUnpackaged/objects/Customer_Classification__c.object
<CustomObject>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>Billing_Account__c</referenceTo>
        <relationshipLabel>Customer Classifications</relationshipLabel>
        <relationshipName>Customer_Classifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Code__c</fullName>
        <formula>Classification__r.Name</formula>
        <label>Class Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Description__c</fullName>
        <formula>Classification__r.Short_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Message__c</fullName>
        <formula>Classification__r.Message__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classification_Sort_Order__c</fullName>
        <description>Sort order from the warning itself.</description>
        <formula>Classification__r.Sort_Order__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Classification Sort Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <label>Classification</label>
        <referenceTo>Classification_Code__c</referenceTo>
        <relationshipLabel>Customer Classifications</relationshipLabel>
        <relationshipName>Customer_Classifications</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Classifications</relationshipLabel>
        <relationshipName>Customer_Warnings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>zzzEnd Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HiAF_Account_Number__c</fullName>
        <formula>Billing_Account__r.HiAF_Account_Number__c</formula>
        <label>HiAF Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Identifies if the classification is still active against the Customer/Billing Account</description>
        <inlineHelpText>Identifies if the classification is still active against the Customer/Billing Account</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Name__c</fullName>
        <formula>LastModifiedBy.Username</formula>
        <label>Last Modified By User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_User_Type__c</fullName>
        <formula>TEXT(LastModifiedBy.UserType)</formula>
        <label>Last Modified By User Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>zzzStart Date</label>
        <type>Date</type>
    </fields>
    <label>Customer Classification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Classification__c</columns>
        <columns>Billing_Account__c</columns>
        <columns>Customer__c</columns>
        <columns>Classification_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Create_CC</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp; 
NOT( 
$Profile.Name == &quot;SEW Integration&quot; || 
$Profile.Name == &quot;SEW Administrator&quot; || 
$Profile.Name == &quot;System Administrator&quot; 
) &amp;&amp; (Classification__r.Name == &quot;CC&quot;)</errorConditionFormula>
        <errorDisplayField>Classification__c</errorDisplayField>
        <errorMessage>You cannot create a new CC classification.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Edit_BA</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Billing_Account__c ) &amp;&amp; NOT(ISBLANK(PRIORVALUE(Billing_Account__c))) &amp;&amp; 
NOT( 
$Profile.Name == &quot;SEW Integration&quot; || 
$Profile.Name == &quot;SEW Administrator&quot; || 
$Profile.Name == &quot;System Administrator&quot; 
)</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Billing Account cannot be changed. If necessary, inactivate this classification and create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Reactivate</fullName>
        <active>true</active>
        <errorConditionFormula>Is_Active__c &amp;&amp;  NOT(PRIORVALUE(Is_Active__c )) &amp;&amp; 
NOT( 
$Profile.Name == &quot;SEW Integration&quot; || 
$Profile.Name == &quot;SEW Administrator&quot; || 
$Profile.Name == &quot;System Administrator&quot; 
)</errorConditionFormula>
        <errorDisplayField>Is_Active__c</errorDisplayField>
        <errorMessage>Inactive classifications cannot be reactivated. Please create a new one.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Credit_User_deals_with_Credit_Mgmt</fullName>
        <active>true</active>
        <description>Only SEW Credit Users can add a Credit Management classifications to a Customer or Billing Account</description>
        <errorConditionFormula>(ISPICKVAL(Classification__r.Type__c, &quot;Credit Management&quot;) || ISPICKVAL(Classification__r.Type__c, &quot;Legal Credit Management&quot;)) &amp;&amp;
NOT(
 $Profile.Name == &quot;SEW Credit User&quot; ||
 $Profile.Name == &quot;SEW Integration&quot; ||
 $Profile.Name == &quot;SEW Administrator&quot; || 
 $Profile.Name == &quot;System Administrator&quot;
)</errorConditionFormula>
        <errorDisplayField>Classification__c</errorDisplayField>
        <errorMessage>Only SEW Credit Users can add a &quot;Credit Management&quot; classification to a Customer or Billing Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_CC_Class_cannot_edit_BA</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Billing_Account__c ) &amp;&amp; 
NOT( 
$Profile.Name == &quot;SEW Integration&quot; || 
$Profile.Name == &quot;SEW Administrator&quot; || 
$Profile.Name == &quot;System Administrator&quot; 
) &amp;&amp; (Classification__r.Name == &quot;CC&quot;)</errorConditionFormula>
        <errorDisplayField>Billing_Account__c</errorDisplayField>
        <errorMessage>Billing Account cannot be changed for &quot;CC&quot; Classification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_CC_Class_cannot_edit_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(  Comments__c  ) &amp;&amp; 
NOT( 
$Profile.Name == &quot;SEW Integration&quot; || 
$Profile.Name == &quot;SEW Administrator&quot; || 
$Profile.Name == &quot;System Administrator&quot; 
) &amp;&amp; (Classification__r.Name == &quot;CC&quot;)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Comments cannot be changed for &quot;CC&quot; Classification</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Tilde</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS( Reference__c , &apos;~&apos;)</errorConditionFormula>
        <errorDisplayField>Reference__c</errorDisplayField>
        <errorMessage>The character &apos;~&apos; cannot be used in the Reference field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reference_Not_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED(  Reference__c  ) &amp;&amp; 
NOT( 
$Profile.Name == &quot;SEW Integration&quot; || 
$Profile.Name == &quot;SEW Administrator&quot; || 
$Profile.Name == &quot;System Administrator&quot; 
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>The reference cannot be changed. If necessary, inactivate and create a new classification.</errorMessage>
    </validationRules>
</CustomObject>